# Ethercat-IGH-Frame

./: .gitignore  business copy.txt  business.txt  control_commander.py  publish_byte_array.py
business_logic_py/: package.xml  setup.cfg  setup.py
business_logic_py/business_logic_py/: business_logic_processor.py  byte_multiarray_parser.py
business_logic_py/launch/: unified_business.launch.py
ethercat_controller/: CMakeLists.txt  package.xml
ethercat_controller/src/: ethercat_node.cpp  huichuan_servo_axis.cpp  leisai_servo_axis.cpp  main.cpp  readme.md  servo_axis_base.cpp  servo_axis_factory.cpp
ethercat_controller/src/business/: BusinessLogicProcessor.cpp  BusinessLogicProcessor.hpp  LayerCommandProcessor.cpp  LayerCommandProcessor.hpp
ethercat_controller/src/include/: ethercat_node.hpp  globals.h  huichuan_servo_axis.hpp  leisai_servo_axis.hpp  servo_axis_base.hpp  servo_axis_factory.hpp
ethercat_controller/src/io_modules/: io_interface.cpp  io_interface.hpp
ethercat_controller/src/scripts/: set_permissions.sh
